kustomize/app_a/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aap-a
  labels:
    app: app-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-a
  template:
    metadata:
      labels:
        app: app-a
    spec:
      containers:
        - name: app-a
          image: APP_IMAGE_URL
          ports:
            - containerPort: 80
