kustomize/app_a/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app-a
spec:
  ports:
    - name: svc-a
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: app-a
  type: ClusterIP
