kustomize/app_a/istio-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-virtualservice
spec:
  hosts:
    - app-b.default.svc.cluster.local
  http:
    - route:
        - destination:
            host: app-b.default.svc.cluster.local
            subset: v1
          weight: 90
        - destination:
            host: app-b.default.svc.cluster.local
            subset: v2
          weight: 10
